FIX : fix to bill manage